--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
-  <img class="logo" src="assets/shared/logo.svg" alt="logo">
+  <img class="logo" src="logo.svg" alt="logo">
   <div class="blur"></div>
   <div class="Nav-bar">
     <table class="Nav-tab" cellspacing="10px">
